WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127726
Setting muted attribute on <video> element is not reflected in controls
https://bugs.webkit.org/show_bug.cgi?id=127726
Summary
Setting muted attribute on <video> element is not reflected in controls
Jer Noble
Reported
2014-01-27 16:27:41 PST
Setting muted attribute on <video> element is not reflected in controls
Attachments
Patch
(14.42 KB, patch)
2014-01-27 20:36 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-01-27 20:36:09 PST
Created
attachment 222401
[details]
Patch
Eric Carlson
Comment 2
2014-01-28 08:28:13 PST
Comment on
attachment 222401
[details]
Patch Nice, thanks!
WebKit Commit Bot
Comment 3
2014-01-28 09:45:22 PST
Comment on
attachment 222401
[details]
Patch Clearing flags on attachment: 222401 Committed
r162941
: <
http://trac.webkit.org/changeset/162941
>
WebKit Commit Bot
Comment 4
2014-01-28 09:45:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug